@@ -24,7 +24,7 @@ use warnings;
 
 ################################################################################
 package CSS::Sass::Plugins;
-our $VERSION = "3.4.0";
+our $VERSION = "3.4.1";
 ################################################################################
 
 # collect plugins
